// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReleasesList /> should render with one release 1`] = `
<Fragment>
  <List__ReleasesListHeader>
    <strong>
      <Icon
        faStyle="fas"
        fixedWidth={false}
        name="arrow-alt-circle-up"
      />
       Update
       Available
    </strong>
    <Button
      color="blue"
      disabled={false}
      icon="download"
      onClick={[MockFunction]}
      tipPlacement="top"
      type="button"
    >
      Install
    </Button>
  </List__ReleasesListHeader>
  <Release
    body="Foo"
    html_url="FOO"
    key="foo"
    name="foo"
  />
</Fragment>
`;

exports[`<ReleasesList /> should render with two releases 1`] = `
<Fragment>
  <List__ReleasesListHeader>
    <strong>
      <Icon
        faStyle="fas"
        fixedWidth={false}
        name="arrow-alt-circle-up"
      />
       Update
      s
       Available
    </strong>
    <Button
      color="blue"
      disabled={false}
      icon="download"
      onClick={[MockFunction]}
      tipPlacement="top"
      type="button"
    >
      Install
    </Button>
  </List__ReleasesListHeader>
  <Release
    body="Foo"
    html_url="FOO"
    key="foo"
    name="foo"
  />
  <Release
    body="Bar"
    html_url="BAR"
    key="bar"
    name="bar"
  />
</Fragment>
`;
